#cmake for cproject

cmake_minimum_required(VERSION 2.6)
PROJECT(GAME_SERVER)

MESSAGE(STATUS "PROJECT : GAME SERVER")

MACRO(USE_CXX11)
    IF (CMAKE_VERSION VERSION_LESS "3.1")
        IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
            SET (CMAKE_CXX_FLAGS "-std=gnu++11 ${CMAKE_CXX_FLAGS}")
        ENDIF ()
    ELSE ()
        SET (CMAKE_CXX_STANDARD 11)
    ENDIF ()
ENDMACRO(USE_CXX11)
USE_CXX11()

SET(CMAKE_BUILE_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -g -ggdb")

ADD_SUBDIRECTORY(plogger)
ADD_SUBDIRECTORY(game game)

EXEC_PROGRAM(mkdir ARGS "${PROJECT_BINARY_DIR}/libs" OUTPUT_VARIABLE OUTPUT RETURN_VALUE RVALUE)